# answeringmachine

./: CallSession.cpp  CallSession.h  ClientContext.cpp  ClientContext.h  ConfigClient.cpp  ConfigClient.h  Makefile.am  Makefile.in  README.md  answeringmachine.cpp  answeringmachine.sln  answeringmachine.vcxproj  config.h  config.h.in  config.status  configure  configure.ac  logging.cpp  logging.h  makecall.cpp  makecall.h  pjsipanswer.cpp  processanswer.cpp  processanswer.h
